# kolokwium

zad2/: makefile  test_build.sh
zad3/: CMakeLists.txt
zad4/: CMakeLists.txt
